# PrototypeLib4Bindings

./: .gitignore  CMakeLists.txt  setup.py
cmake/: FindCppyy.cmake
prototype_lib_for_bindings/: CMakeLists.txt  submod.py
prototype_lib_for_bindings/greeting/: CMakeLists.txt  manifest.cmake  selection.xml
prototype_lib_for_bindings/greeting/GreetingCPP/inc/: Hello.h
prototype_lib_for_bindings/greeting/GreetingCPP/src/: Hello.cpp
prototype_lib_for_bindings/greeting/extensions/inc/: hello.h
prototype_lib_for_bindings/greeting/extensions/src/: hello.cpp
